--- a/index.html
+++ b/index.html
@@ -4,67 +4,69 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="index, follow" />
-  <meta name="description" content="Trang portfolio của NguyenTungSk2004: tiện ích Chrome, extension ChatGPT, dự án AI học máy, Clean Architecture .NET và mã nguồn mở nổi bật." />
-  <meta name="keywords" content="NguyenTungSk2004, Nguyen Tung, GitHub portfolio, Chrome Extension ChatGPT, AI TOC Marker, Clean Architecture .NET, học máy, AI Việt Nam, GitHub dev Việt Nam, lập trình viên mã nguồn mở, AI CoVay, quản lý trung tâm tiếng Anh, ChatGPT tools, developer GitHub, open source Việt Nam" />
-  <meta property="og:title" content="Nguyen Tung SK – GitHub Portfolio | Chrome Extension, AI, .NET Dev" />
-  <meta property="og:description" content="Khám phá các sản phẩm GitHub của NguyenTungSk2004: tiện ích ChatGPT, AI học máy, kiến trúc phần mềm .NET và dự án học thuật." />
-  <meta property="og:url" content="https://github.com/NguyenTungSk2004" />
+  <meta name="description" content="Trang GitHub Portfolio chính thức của NguyenTungSk2004: lập trình viên mã nguồn mở, Chrome Extension, ChatGPT tools, AI học máy và dự án .NET Clean Architecture." />
+  <meta name="keywords" content="NguyenTungSk2004, Nguyen Tung SK, GitHub developer, lập trình viên Việt Nam, ChatGPT extension, Chrome Plugin AI, Clean Architecture .NET, học máy, AI TOC Marker, open source, GitHub portfolio" />
+  <meta property="og:title" content="Nguyen Tung SK – GitHub Portfolio | Open Source, AI, Chrome Extension" />
+  <meta property="og:description" content="Khám phá dự án GitHub nổi bật của NguyenTungSk2004: tiện ích ChatGPT, AI học máy, kiến trúc phần mềm .NET và hơn thế nữa." />
+  <meta property="og:url" content="https://nguyentungsk2004.github.io/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://avatars.githubusercontent.com/u/134217032?v=4" />
-  <meta property="og:site_name" content="Nguyen Tung SK Portfolio" />
-  <link rel="canonical" href="https://github.com/NguyenTungSk2004" />
+  <meta property="og:site_name" content="Nguyen Tung SK GitHub Profile" />
+  <link rel="canonical" href="https://nguyentungsk2004.github.io/" />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <title>Nguyen Tung SK – GitHub Portfolio | Chrome Extension, AI, .NET Dev</title>
+  <title>Nguyen Tung SK – GitHub Portfolio | Open Source, AI, .NET Dev</title>
 </head>
 <body>
   <header>
-    <img src="https://avatars.githubusercontent.com/u/134217032?v=4" alt="Nguyen Tung SK Avatar" class="avatar" />
-    <h1>Nguyen Tung SK – GitHub Developer Việt Nam</h1>
-    <p class="subtitle">Portfolio lập trình viên: tiện ích ChatGPT, AI, .NET, mã nguồn mở.</p>
+    <a href="https://github.com/NguyenTungSk2004" target="_blank">
+      <img src="https://avatars.githubusercontent.com/u/134217032?v=4" alt="Nguyen Tung SK Avatar" class="avatar" />
+    </a>
+    <h1>Nguyen Tung SK – GitHub Developer</h1>
+    <p class="subtitle">Portfolio mã nguồn mở: tiện ích ChatGPT, AI học máy, .NET, Chrome Extension</p>
   </header>
 
   <main>
     <section class="projects">
-      <h2>📂 Các dự án trên GitHub</h2>
+      <h2>📌 Dự án nổi bật</h2>
       <div class="card-grid">
         <a href="https://github.com/NguyenTungSk2004/AI-TOC-Marker" class="card" target="_blank" rel="noopener">
           <h3>AI TOC Marker</h3>
-          <p>Tiện ích mở rộng đánh dấu tiêu đề ChatGPT. Hỗ trợ điều hướng nội dung dài.</p>
+          <p>Tiện ích đánh dấu heading trong hội thoại ChatGPT. Dễ điều hướng và sử dụng.</p>
         </a>
         <a href="https://github.com/NguyenTungSk2004/CleanArchitecture" class="card" target="_blank" rel="noopener">
           <h3>Clean Architecture</h3>
-          <p>Mẫu kiến trúc phần mềm .NET chuyên nghiệp, áp dụng MediatR, DDD.</p>
+          <p>Kiến trúc phần mềm .NET hiện đại. Áp dụng DDD, MediatR, CQRS chuẩn chỉnh.</p>
         </a>
         <a href="https://github.com/NguyenTungSk2004/AI_CoVay" class="card" target="_blank" rel="noopener">
           <h3>AI CoVay</h3>
-          <p>Dự án trí tuệ nhân tạo nâng cao, phân tích ngôn ngữ và học máy.</p>
+          <p>Hệ thống AI phân tích ngôn ngữ tự nhiên, thuật toán học máy và xử lý dữ liệu.</p>
         </a>
         <a href="https://github.com/NguyenTungSk2004/QuanliTrungTamTA" class="card" target="_blank" rel="noopener">
           <h3>Quản lý Trung Tâm TA</h3>
-          <p>Ứng dụng quản lý trung tâm tiếng Anh – thực hành quản lý học viên, lịch học, báo cáo.</p>
+          <p>Phần mềm quản lý trung tâm tiếng Anh: học viên, giảng viên, lịch học, báo cáo.</p>
         </a>
       </div>
     </section>
 
     <section class="pages">
-      <h2>🌐 Các trang giới thiệu (.github.io)</h2>
+      <h2>🌐 Trang giới thiệu</h2>
       <div class="card-grid">
         <a href="https://nguyentungsk2004.github.io/AI-TOC-Marker/" class="card" target="_blank" rel="noopener">
-          <h3>AI TOC Marker – Trang demo</h3>
-          <p>Trang giới thiệu tiện ích mở rộng AI TOC Marker chạy thực tế trên GitHub Pages.</p>
+          <h3>Demo AI TOC Marker</h3>
+          <p>Trang minh họa thực tế tính năng tiện ích mở rộng ChatGPT TOC Marker.</p>
         </a>
       </div>
     </section>
 
     <section class="connect">
-      <h2>🔗 Kết nối mạng xã hội & email</h2>
+      <h2>🔗 Kết nối & hồ sơ</h2>
       <ul>
         <li><a href="mailto:nguyentungsk2004@gmail.com">📧 Email: nguyentungsk2004@gmail.com</a></li>
-        <li><a href="https://linktr.ee/nguyentungsk">🌐 Linktree – Tổng hợp các kênh mạng xã hội</a></li>
-        <li><a href="https://github.com/NguyenTungSk2004?tab=repositories">📂 Xem tất cả repo trên GitHub</a></li>
+        <li><a href="https://linktr.ee/nguyentungsk" target="_blank">🌐 Linktree – Tổng hợp mạng xã hội</a></li>
+        <li><a href="https://github.com/NguyenTungSk2004?tab=repositories" target="_blank">📂 Toàn bộ repo trên GitHub</a></li>
       </ul>
     </section>
   </main>
