--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <link rel="canonical" href="https://nguyentungsk2004.github.io/" />
   <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/134217032?v=4" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
