cập nhật kinh nghiệm làm việc

--- a/index.html
+++ b/index.html
@@ -279,28 +279,35 @@
     </section>
 
     <section class="enterprise-projects">
-      <div class="container">
-        <h2 class="section-title">Kinh nghiệm doanh nghiệp</h2>
-        <div class="projects-grid">
-          <article class="project-card enterprise">
-            <div class="project-content">
-              <h3>CRM System .NET & Angular</h3>
-              <p class="project-placeholder">
-                [Mô tả chi tiết về vai trò và công việc của bạn trong dự án CRM - vui lòng cập nhật nội dung này]
-              </p>
-              <div class="project-tech">
-                <span class="tech-tag">C#</span>
-                <span class="tech-tag">.NET Core</span>
-                <span class="tech-tag">Angular</span>
-                <span class="tech-tag">TypeScript</span>
-                <span class="tech-tag">Entity Framework</span>
-                <span class="tech-tag">SQL Server</span>
-              </div>
+    <div class="container">
+      <h2 class="section-title">Kinh nghiệm doanh nghiệp</h2>
+      <div class="projects-grid">
+        <article class="project-card enterprise">
+          <div class="project-content">
+            <h3>CRM System .NET & Angular</h3>
+            <div class="project-placeholder">
+              Đảm nhiệm vai trò <strong>Full Stack Developer</strong>, tôi chịu trách nhiệm:
+              <ul>
+                <li>Thiết kế và phát triển giao diện với <strong>Angular</strong> và thư viện <strong>ng-zorro</strong>, xây dựng các component tái sử dụng (input, dropdown, select…) đảm bảo tính nhất quán và nâng cao tốc độ phát triển.</li>
+                <li>Triển khai cơ chế <em>search</em> song ngữ Anh–Việt mượt mà, tối ưu trải nghiệm người dùng khi tìm kiếm dữ liệu.</li>
+                <li>Refactor và áp dụng nguyên tắc <strong>Clean Code</strong> trong backend (.NET Core), thiết kế, xây dựng và bảo trì các API bằng <strong>Entity Framework</strong> với migrations để đảm bảo tính linh hoạt và khả năng mở rộng cao.</li>
+                <li>Cập nhật, tối ưu hoặc xây dựng mới các endpoint chưa hoàn thiện, phối hợp chặt chẽ với team frontend để tích hợp dữ liệu xuyên suốt và đảm bảo hiệu năng.</li>
+              </ul>
             </div>
-          </article>
-        </div>
+            <div class="project-tech">
+              <span class="tech-tag">C#</span>
+              <span class="tech-tag">.NET Core</span>
+              <span class="tech-tag">Angular</span>
+              <span class="tech-tag">TypeScript</span>
+              <span class="tech-tag">Entity Framework</span>
+              <span class="tech-tag">SQL Server</span>
+            </div>
+          </div>
+        </article>
       </div>
-    </section>
+    </div>
+  </section>
+
 
     <section id="contact" class="contact">
       <div class="container">
